feat: rename files, update README, index.html, and add assets
- Renamed 'script.js' to 'createSentence.js'. - Changed 'README.txt' to 'README.md' and updated its content. - Added new files: 'style.css' and 'script.js'. - Updated 'index.html' to prepare it for writing code. - Created a new folder 'Assets' and added a logo image.

--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-<title>Page Title</title>
+<title>Personal Portfolio</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="">
-<style>
-</style>
-<script src=""></script>
+<link rel="stylesheet" href="style.css">
+<link rel="createSentense.js">
+<header>
+    <nav>
+        <a href="https://ilan8201.github.io/git_practice/"><img src="Assets/Logo.png" alt="Logo"></a>
+    </nav>
+</header>
 <body>
-
-<img src="img_la.jpg" alt="LA" style="width:100%">
-
-<div class="">
- <h1>This is a Heading</h1>
- <p>This is a paragraph.</p>
- <p>This is another paragraph.</p>
-</div>
-
+    
 </body>
+
 </html>
